--- a/index.html
+++ b/index.html
@@ -3,9 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kennedy Bryant Portfolio</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+    <header>
+        <h1>Kennedy Bryant</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="main">
+        <section class="top">
+            <img src="https://picsum.photos/300/200" class="profile" alt="profilePic">
+            <div class='intro'>
+                <h2>Kennedy Bryant</h2>
+                <button type="button" class="button button1">My Projects</button>
+                <p>Hey, there! My name is Kennedy Bryant, and I am a junior web developer. To me, coding is a lot like magic. The keyboard is the wand, and the code is the spell itself. I love to create accessible and engaging webpages.</p>
+            </div>
+        </section>
+        <section class="preview">
+            <div class="item"><img src="https://picsum.photos/150" alt="Project 1">
+                <div class="title">Project 1</div>   
+            </div> 
+            <div class="item"><img src="https://picsum.photos/150" alt="Project 2">
+                <div class="title">Project 2</div>
+            </div>
+            <div class="item"><img src="https://picsum.photos/150" alt="Project 3">
+                <div class="title">Project 3</div>
+            </div>
+            <div class="item"><img src="https://picsum.photos/150" alt="Project 4">
+                <div class="title">Project 4</div>
+            </div>
+            <div class="item"><img src="https://picsum.photos/150" alt="Project 5">
+                <div class="title">Project 5</div>
+            </div>
+            <div class="item"><img src="https://picsum.photos/150" alt="Project 6">
+                <div class="title">Project 6</div>
+            </div>
+            <div class="item"><img src="https://picsum.photos/150" alt="Project 7">
+                <div class="title">Project 7</div>
+            </div>
+            <div class="item"><img src="https://picsum.photos/150" alt="Project 8">
+                <div class="title">Project 8</div>
+            </div>
+        </section>
+    </div>
+        
+        <footer>
+            <p>Like what you see?</p>
+            <button type="button" class="button button2">Contact Me</button>
+            <section class="links">
+                <a href="#">Twitter</a>
+                <a href="#">linkedIn</a>
+                <a href="#">Instagram</a>
+            </section>
+        </footer>
     
 </body>
 </html>
