--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="main">
         <section class="top">
             <div class="profile">
-                <img src="https://picsum.photos/300/200" class="profile" alt="profilePic">
+                <img src="https://picsum.photos/300/200"  alt="profilePic">
             </div>
             
             <div class='intro'>
