--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
         </section>
         <section class="preview">
-            <div class="item"><img src="https://picsum.photos/150" alt="Project 1">
-                <div class="title">Project 1</div> <!--End .title div-->  
+            <div class="item"><a href="https://nasa-photo-of-the-day-k3a4469l4-kennedybryant.vercel.app/"><img src="./images/Screen Shot 2021-10-14 at 6.16.09 PM.png" width="150px" alt="Nasa Photo of the Day Preview">
+                <div class="title">NASA Photo of the Day</div></a> <!--End .title div-->  
             </div> <!--End .item div-->
             <div class="item"><img src="https://picsum.photos/150" alt="Project 2">
                 <div class="title">Project 2</div><!--End .title div-->  
